Fixed appearance on mobile devices

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   text-align: center;
   color: white;
-  padding: 20px;
+  padding: 5px;
   font-family: Arial, sans-serif;
   background: linear-gradient(
     -45deg,
@@ -26,20 +26,32 @@ body {
     background-position: 0% 50%;
   }
 }
-
 .container {
-  padding-top: 150px;
+  padding-top: 1em;
+  width: 100%;
+  text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .container {
+    width: 50%;
+    padding-left: 25%;
+  }
+}
+/*.container {
+  padding-top: 1em;
   padding-left:25%;
   width: 50%;
  text-align: center;
 }
+*/
 
 #artwork-container {
   display: none;
 }
 
 h1 { 
-  font-size: 80px;
+  font-size: 5em;
   color: #00111a; 
   text-transform: uppercase;
   text-shadow: 2px 2px 2px #efbc75;
@@ -52,11 +64,11 @@ color: #00111a
 
 
 form {
-  margin-bottom: 20px;
+  margin-bottom: 1.5em;
 }
 
 input[type="text"] {
-  padding: 5px;
+  padding: .5em;
   width: 200px;
 }
 
